@@ -1,3 +1,4 @@
+* Dialer (ECCP): add support for inactivity timeout in web agent console.
 * Agent Console: add minimal error handling to javascript ajax methods.
 * Agent Console: display VtigerCRM button only if VtigerCRM is installed
 * Dialer: add code to repair corrupted audit entries on dialer startup.
